# gimp-anaglyph

./: CMakeLists.txt  README.md  anaglyph.c  gtk_mui_macro.h
